# genshin-optimizer

./: .gitignore  CLAUDE.md  package.json
apps/frontend/: index.html  vite.config.mts
apps/frontend-playwright/: playwright.config.ts
apps/frontend-playwright/tests/: smoke.spec.ts  tools.spec.ts
apps/frontend/src/: index.css  main.tsx  persistentStorage.ts
apps/frontend/src/app/: App.tsx  Header.tsx
apps/frontend/src/app/Tools/: ToolCard.tsx  ToolViewer.tsx  index.tsx  toolsManifest.ts
apps/sr-frontend/: vite.config.mts
apps/zzz-frontend/: vite.config.mts
docs/: desktop.md
libs/common/database/src/lib/: DBLocalStorage.ts
libs/common/util/src/: index.ts
libs/common/util/src/lib/: desktop.ts
libs/gi/db/src/Database/DataEntries/: DBMetaEntry.ts
libs/gi/db/src/Database/DataManagers/: index.ts
libs/gi/i18n/src/: i18n.ts
libs/gi/localization/assets/locales/en/: ui.json
libs/gi/page-artifacts/src/: index.tsx
libs/gi/page-characters/src/: index.tsx
libs/gi/page-doc/src/: index.tsx
libs/gi/page-home/src/: index.tsx
libs/gi/page-scanner/src/: index.tsx
libs/gi/page-settings/src/: index.tsx
libs/gi/page-tools/src/: index.tsx
libs/gi/page-weapons/src/: index.tsx
libs/gi/ui/src/components/database/: DatabaseCard.tsx  UploadCard.tsx
libs/sr/i18n/src/: i18n.ts
libs/zzz/i18n/src/: i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/scripts/: desktop-build.mjs  desktop-dev-server.mjs  desktop-dev.mjs  generate-update-json.mjs
