[package]
name = "genshin-optimizer-desktop"
version = "0.1.0"
description = "Desktop shell for Genshin Optimizer"
authors = ["Timon"]
edition = "2021"

[lib]
name = "genshin_optimizer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

[profile.release]
opt-level = 1
lto = false
codegen-units = 16
strip = true
